# bmp-processor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: app.cpp  app.h  bitmap.cpp  bitmap.h  parser.cpp  parser.h  utils.h
exceptions/: app_error.cpp  app_error.h
filters/: filter_pipeline.cpp  filter_pipeline.h  filters.cpp  filters.h
tests/: test.cpp
